# qt-writing-application

./: .clang-format  .clang-tidy  .cpp_check_suppressions  .cspell.json  .gitignore  .pre-commit-config.yaml  .yamllint  CMakeLists.txt  README.md  build.sh  build_container.sh  qt-writing-application.prj  repo_setup.sh
.cspell/: cmake.dict  main.dict  qt.dict  shell.dict  static-analysis.dict  windows.dict
.iwyu_mappings/: main.imp  qt.imp  windows.imp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/hmi/: mainwindow.cpp  mainwindow.h
src/res/icons/fugue-icons/: CHANGELOG.txt  FILENAME.txt
src/res/ui/: mainwindow.ui
